--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,20 +4,31 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^22.15.3",
-    "typescript": "^5.8.3"
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.11.9",
+    "@types/uuid": "^9.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.3"
   },
   "scripts": {
     "dev": "ts-node-dev --watch --transpile-only src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
-    "dotenv": "^16.5.0",
-    "pg": "^8.15.6",
-    "reflect-metadata": "^0.2.2",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typeorm": "^0.3.22"
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.10",
+    "uuidv4": "^6.2.13",
+    "yup": "^0.32.11"
   }
 }
