--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,7 +13,7 @@
     "typescript": "^4.9.3"
   },
   "scripts": {
-    "dev": "ts-node-dev --watch --transpile-only src/server.ts",
+    "dev": "ts-node-dev src/app.ts",
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
