--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,30 +5,30 @@
   "license": "MIT",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.14",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.4",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^18.11.9",
-    "@types/uuid": "^9.0.0",
+    "@types/uuid": "^8.3.4",
+    "supertest": "^6.2.4",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.7.4"
   },
   "scripts": {
-    "dev": "ts-node-dev src/app.ts",
+    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
-    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.8.0",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.10",
-    "uuidv4": "^6.2.13",
-    "yup": "^0.32.11"
+    "ts-node": "^10.9.1",
+    "typeorm": "^0.3.6",
+    "uuidv4": "^6.2.13"
   }
 }
